# project-2

./: answers.md
project2/: GIPHYAPI.py  GIPHYCLI.py  check_script.py  pyproject.toml  quick.py
project2/tests/: TestGiphyAPI.py  TestGiphyCLI.py
