[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["jcronin21 <jcronin@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
